--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
+    "cli-define": "^0.5.43",
     "istanbul": "^0.3.2",
     "mocha": "^1.21.4"
   },
