--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
       {
         "inc": [
           "introduction.md",
-          "install.md"
+          "install.md",
+          "test.md"
         ]
       },
       {
